--- a/simple.yml
+++ b/simple.yml
@@ -1,19 +1,8 @@
----
 WS: default
 default:
   STATE:
   - :MAIN
   :MAIN:
-  - set:
-    - T
-    - Hello world
+  - set: [T, "Hello world"]
   - say: T
   - exit_program: []
-  :INIT: []
-  T:
-  - Hello world
-ARGS:
-- '123'
-FILENAME:
-- simple.yml
-HISTORY: []
